@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.filmweb.pl"
         name="Filmweb"
-        version="2.2.3"
+        version="2.2.5"
         provider-name="Regss|smuto">
     <requires>
         <import addon="xbmc.metadata" version="2.1.0"/>
@@ -17,5 +17,8 @@
         <description lang="en">Download Movie information from www.filmweb.pl</description>
         <description lang="pl">Pobiera informacje o filmie ze strony www.filmweb.pl</description>
         <platform>all</platform>
+        <forum>http://kodi.org.pl/forum/10-XBMC---Wtyczki-pluginy/3565-filmweb-pl-scraper</forum>
+        <email>regss84@gmail.com</email>
+        <source>https://github.com/Regss/metadata.filmweb.pl</source>
     </extension>
 </addon>
