@@ -1,3 +1,9 @@
+[B]2.2.5[/B]
+- Poprawka: miniaturki aktorów
+- Poprawka: pobieranie studia z filmweb
+- Poprawka: pobieranie trailerów
+[B]2.2.4[/B]
+- Poprawka: pobieranie tagline
 [B]2.2.3[/B]
 - Poprawka: pobieranie obsady
 [B]2.2.2[/B]
